--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Morgan Thomas UX
 highlighter: rouge
 encoding: utf-8
-url:                 http://Mjtho.github.io/
+url: http://Mjtho.github.io
 
 # Build settings
 markdown: kramdown
